.kubernetes/kubernetes_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rvtr-api-lodging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lodging
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lodging
    spec:
      containers:
        - env:
            - name: ConnectionStrings__pgsql
              value: 'Host=postgres;Database=LodgingData;Username=postgres;Password=LodgingData@2020;'
          image: lodging:0.2.0-aspnet-rest
          imagePullPolicy: Always
          name: lodging
          ports:
            - containerPort: 9000
              name: lodging-http

        - env:
            - name: POSTGRES_PASSWORD
              value: LodgingData@2020
          image: postgres:12
          imagePullPolicy: Always
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres-tcp
