.kubernetes/k8s_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lodging
spec:
  ports:
    - name: lodging
      port: 80
      targetPort: lodging-http
  selector:
    app: lodging
  type: ClusterIP
