.kubernetes/k8s_ingress_route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lodging
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 10
      services:
        - kind: Service
          name: lodging
          port: 80
